# OpenNNL

./: CMakeLists.txt  LICENSE  OpenNNL.pro  README  main.cpp  mnistfile.cpp  mnistfile.h  opennnl.cpp  opennnl.h  utils.h
src/: CMakeLists.txt  main.cpp  mnistfile.h  opennnl.cpp  utils.h
